--- a/.github/workflows/cdk-deploy.yml
+++ b/.github/workflows/cdk-deploy.yml
@@ -1,10 +1,22 @@
 name: Deploy CDK Stack
 
+
+##########################################################################################################
+####                                BRANCHES TO DEPLOY TO
+####        however, the filters in the last section select which branches to deploy to
+
+##########################################################################################################
+
 on:
   push:
     branches:
       - stage
       - main
+
+##########################################################################################################
+####      THE JOBS BELOW ARE PERFORMED ON THE GITHUB WORKFLOW RUNNER (UBUNTU-LATEST)
+
+##########################################################################################################
 
 jobs:
   deploy:
@@ -32,7 +44,13 @@ jobs:
       - name: Install AWS CDK
         run: npm install -g aws-cdk
 
-      # Deploy based on branch
+##########################################################################################################
+#####                   SECRETS FOR AWS CREDENTIALS
+#####       secrets need to be created in the github repository
+#####       https://docs.github.com/en/actions/security-guides/encrypted-secrets
+##### https://docs.github.com/en/actions/security-for-github-actions/security-guides/using-secrets-in-github-actions#creating-secrets-for-a-repository
+
+##########################################################################################################
       - name: Deploy CDK Stack
         env:
           AWS_REGION: us-east-1
@@ -40,6 +58,12 @@ jobs:
           CDK_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+##########################################################################################################
+#####                   LOGIC TO DEPLOY STACKS BASED ON BRANCH NAME
+#####       if branch is stage, deploy stage stack, if branch is main, deploy prod stack
+
+##########################################################################################################
         run: |
           if [ "${{ github.ref }}" == "refs/heads/stage" ]; then
             cdk deploy CdkEmailParserStack-Stage -c env_name=stage --require-approval never
