--- a/.github/workflows/cdk-deploy.yml
+++ b/.github/workflows/cdk-deploy.yml
@@ -58,8 +58,10 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
+          source .venv/bin/activate  # Activate the virtual environment
           if [ "${{ github.ref }}" == "refs/heads/stage" ]; then
             cdk deploy CdkEmailParserStack-Stage -c env_name=stage --require-approval never --force
           elif [ "${{ github.ref }}" == "refs/heads/main" ]; then
             cdk deploy CdkEmailParserStack-Prod -c env_name=prod --require-approval never --force
           fi
+
