--- a/.github/workflows/cdk-deploy.yml
+++ b/.github/workflows/cdk-deploy.yml
@@ -43,13 +43,13 @@ jobs:
       - name: Install AWS CDK
         run: npm install -g aws-cdk
 
-      ##########################################################################################################
-      #####                   SECRETS FOR AWS CREDENTIALS
-      #####       secrets need to be created in the github repository
-      #####       https://docs.github.com/en/actions/security-guides/encrypted-secrets
-      ##### https://docs.github.com/en/actions/security-for-github-actions/security-guides/using-secrets-in-github-actions#creating-secrets-for-a-repository
+##########################################################################################################
+#####                   SECRETS FOR AWS CREDENTIALS
+#####       secrets need to be created in the github repository
+#####       https://docs.github.com/en/actions/security-guides/encrypted-secrets
+##### https://docs.github.com/en/actions/security-for-github-actions/security-guides/using-secrets-in-github-actions#creating-secrets-for-a-repository
 
-      ##########################################################################################################
+##########################################################################################################
       - name: Deploy CDK Stack
         env:
           AWS_REGION: us-east-1
@@ -57,6 +57,12 @@ jobs:
           CDK_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+##########################################################################################################
+####                        DEPLOYMENT TO STAGE AND PROD BRANCHES
+####        the code activates virtual environment and deploys to the stage branch
+
+##########################################################################################################
+
         run: |
           source .venv/bin/activate  # Activate the virtual environment
           if [ "${{ github.ref }}" == "refs/heads/stage" ]; then
